# verialign

./: .env.example  .gitignore  pyproject.toml
tests/: distilgpt2_llm_judge.py  test_api.py  test_benchmark_scripts.py  test_checklist_generator.py  test_confidence_scorer.py  test_contradiction_detector.py  test_cost_model.py  test_fallback.py  test_integration.py  test_middleware_body_size_limit.py  test_middleware_logging.py  test_middleware_metrics.py  test_provider_router.py  test_rate_limiter.py  test_request_handler.py  test_response_handler.py  test_semantic_cache.py  test_source_grounder.py  test_store_switching.py  test_trace_store.py  test_verification_cache.py  test_web_grounder.py
verialign/dashboard/: app.py
verialign/dashboard/components/: charts.py  filters.py
verialign/dashboard/pages/: contradictions.py  drift.py  overview.py  per_model.py  per_task.py  trace_detail.py
verialign/proxy/: admin.py  config.py  main.py  provider.py
verialign/proxy/middleware/: body_size_limit.py  logging_middleware.py  metrics_middleware.py  rate_limiter.py  request_handler.py  request_timeout.py  (+2 more)
verialign/scripts/: adversarial_benchmark.py  benchmark.py  benchmark_claims.py  benchmark_verification.py  seed_data.py
verialign/storage/: async_trace_store.py  metrics_store.py  models.py  store_factory.py  trace_store.py
verialign/verification/: checklist_generator.py  claim_extractor.py  confidence_scorer.py  contradiction_detector.py  engine.py  models.py  nli_grounder.py  source_grounder.py  valkey_cache.py  verification_cache.py  web_grounder.py
(+3 files in other folders)
