[project]
name = "verialign"
version = "0.1.0"
description = "OpenAI-compatible verification support proxy for LLM outputs"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
async = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]
valkey = ["valkey>=6.0.0"]
sentry = ["sentry-sdk>=2.0.0"]
otel = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.50.0",
]
all = [
    "verialign[dev,async,valkey,sentry,otel]",
]

[tool.setuptools.packages.find]
include = ["verialign*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
